versioned_docs/version-2023.2.1/professor/fabio_fernandes_da_silva.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
export const data = {
  title: "Fábio Fernandes da Silva",
  base: "",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: [
        {
          subject: "Circuitos Hidráulicos e Pneumáticos",
          size: 4,
          teachers: [
            "Fábio Fernandes da Silva"
          ],
          classroom: "Sala 8-2",
          students: [
            "ELM2022"
          ],
          time: "19:00 - 19:50"
        },
        {
          subject: "Processos de Fabricação 1",
          size: 2,
          teachers: [
            "Fábio Fernandes da Silva"
          ],
          classroom: "Laboratório de Usinagem B4",
          students: [
            "EIN2022"
          ],
          time: "10:15 - 11:05"
        }
      ]
    },
    {
      dayName: "Terça-Feira",
      dayClasses: []
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: [
        {
          subject: "Manutenção Industrial",
          size: 2,
          teachers: [
            "Fábio Fernandes da Silva"
          ],
          classroom: "Sala 8-2",
          students: [
            "ELM2022"
          ],
          time: "19:00 - 19:50"
        },
        {
          subject: "Processos de Fabricação II",
          size: 2,
          teachers: [
            "Fábio Fernandes da Silva"
          ],
          classroom: "Laboratório de Usinagem B4",
          students: [
            "ELM2023"
          ],
          time: "21:00 - 21:50"
        }
      ]
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: []
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: []
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 17:35",
      size: 50
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# Fábio Fernandes da Silva

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
